# thai_portfolio

./: .gitignore  ETL_thai.ipynb  ETL_thai_dados_iniciais.ipynb  README.md  analise_dados_thai.ipynb  index.md  mkdocs.yml  pyproject.toml
.virtual_documents/: ETL_thai.ipynb  Untitled.ipynb  analise_dados_thai.ipynb
dados/: antes_abril_2022.xlsx  df_thai_final.xlsx  rel_eventos.xlsx  rel_eventos_2023.xlsx
docs/: index.md
graficos/: Tabela_fechado.html  dist_dia_semana.html  dist_dia_semana_fut.html  etapas_processo.html  eventos_ano_atual.html  eventos_fut.html  eventos_negociados_ano.html  eventos_negociados_fut.html  eventos_realizados.html  faturamento_ano.html  num_convidados_valor_cardápio.html  orç_ano.html  orç_prox_ano.html  qtde_orçamentos.html  regressão_linear.html  tabela_em_negociação.html  valor_qtde_pessoas.html  valor_total_orçado.html
