[tool.pdm]

[project]
name = "thai_portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Balbinotti", email = "rbalbinotti@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
dev = [
    "blue>=0.9.1",
    "isort>=5.12.0",
    "taskipy>=1.10.4",
    "jupyterlab>=3.6.3",
]
docs = [
    "mkdocs-material>=9.1.5",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=0.9.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = 'mkdocs serve'